# proxbox-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  index.html  llms.txt  mkdocs.yml  playwright.config.ts  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  sitemap.xml  test_discovery_event.py  test_fix_verification.py  test_vm_stream_direct.py
.gitea/scripts/: require_ci_status.py
.gitea/workflows/: ci.yml  deploy-production.yml  mirror-github.yml  publish-gitea.yml
.github/: CLAUDE.md  FUNDING.yml  netbox-versions.json
.github/workflows/: ci-basic.yml  ci.yml  docker-hub-publish.yml  docker-publish.yml  docs.yml  nightly-schema-refresh.yml  notify-profile.yml  publish-proxmox-mock.yml  publish-testpypi.yml  release-docker-verify.yml  rust-reconcile.yml
CLAUDE/: index.html
api/cache/: index.html
api/cluster-ha/: index.html
api/http-reference/: index.html
api/websocket-reference/: index.html
architecture/caching/: index.html
architecture/overview/: index.html
automation/: CLAUDE.md  __init__.py  main.py
benchmarks/reconciliation/: bench_vm_queue.py  generate_vm_snapshot.py
contracts/: overwrite_flags.json
development/ci-e2e-workflows/: index.html
development/contributing/: index.html
development/deployment/: index.html
development/e2e-proxmox-service-matrix/: index.html
development/refactoring-summary/: index.html
development/release-publishing/: index.html
development/schema-management/: index.html
development/sync-fix-summary/: index.html
development/testing/: index.html
development/troubleshooting/: index.html
docker/: CLAUDE.md  entrypoint-granian.sh  entrypoint-mkcert.sh  entrypoint-nginx.sh  entrypoint-raw.sh  entrypoint-runtime.sh
docker/nginx/: proxbox-https.conf.template
docker/supervisor/: proxbox.conf
docs/: CLAUDE.md  index.md
docs/api/: cache.md  cluster-ha.md  http-reference.md  service-routes.md  websocket-reference.md
docs/architecture/: caching.md  overview.md
docs/development/: async-gather.md  async-overview.md  async-semaphores.md  async-timeout-scoping.md  async-tunables.md  async-two-phase-batch.md  ci-e2e-workflows.md  contributing.md  deployment.md  e2e-proxmox-service-matrix.md  refactoring-summary.md  release-publishing.md  schema-management.md  sync-fix-summary.md  testing-with-mocks.md  testing.md  troubleshooting.md
docs/getting-started/: authentication.md  configuration.md  installation.md
docs/operations/: ceph-write-approvals.md  custom-fields.md  firecracker.md  hardware-discovery.md
docs/pt-BR/: index.md
docs/sync/: name-collision-resolver.md  overwrite-flags.md  reconciliation-architecture.md  scheduler-container.md  task-history.md  workflows.md
getting-started/authentication/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
nextjs-ui/: .env.example  AGENTS.md  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json
nextjs-ui/app/: globals.css  layout.tsx  page.tsx
nextjs-ui/components/: endpoint-form.tsx
nextjs-ui/lib/: api.ts  types.ts
operations/firecracker/: index.html
operations/hardware-discovery/: index.html
proxbox-reconcile-rs/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
proxbox-reconcile-rs/python/proxbox_reconcile_rs/: __init__.py
proxbox-reconcile-rs/src/: diff.rs  lib.rs  normalize.rs  vm.rs
proxbox-reconcile-rs/tests/: test_import.py
proxbox_api/: CLAUDE.md  __init__.py  auth.py  cache.py  constants.py  credentials.py  database.py  database_protocols.py  dependencies.py  exception.py  log_buffer.py  logger.py  main.py  mock_main.py  netbox_async_bridge.py  netbox_compat.py  netbox_rest.py  netbox_sdk_helpers.py  netbox_sdk_sync.py  netbox_version.py  nginx.conf  openapi_custom.py  proxmox_async.py  runtime_settings.py  schema_cli.py  schema_version_manager.py  settings_client.py  ssrf.py  test_endpoint_crud.py  test_main.py  test_proxmox_to_netbox.py  utils.py
proxbox_api/app/: CLAUDE.md  __init__.py  bootstrap.py  cache_routes.py  cors.py  exceptions.py  factory.py  full_update.py  netbox_session.py  root_meta.py  sync_processes.py  sync_state.py  websockets.py
proxbox_api/ceph/: CLAUDE.md  __init__.py  client.py  inventory.py  (+9 more)
proxmox-mock/: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
proxmox-mock/proxmox_mock/: __init__.py  app.py  errors.py  log.py  main.py  openapi.py  routes.py  state.py
proxmox-mock/proxmox_mock/codegen/: __init__.py  pydantic_generator.py
proxmox-mock/tests/: test_generated_proxmox_mock_routes.py
pt-BR/: index.html
scripts/: CLAUDE.md  __init__.py  pve9_live_smoketest.py  refresh_schemas.py  test-with-mock.sh
search/: search_index.json
tasks/: CLAUDE.md  lessons.md  todo.md
tests/: CLAUDE.md  __init__.py  conftest.py  fixtures.py  test_admin_logs.py  test_api_routes.py  test_auth_bootstrap.py  test_auth_lockout.py  test_azure_vhd_import.py  test_backups_none_return.py  test_backups_vm_sync.py  test_bridge_interfaces.py  test_bulk_sync_error_accounting.py  test_cloud_image_pipeline.py  test_cloud_image_template_security.py  test_cluster_netbox_link_sync.py  test_cluster_resources_dedup.py  test_cluster_resources_type_param.py  test_cluster_sync_branch_bridge.py  test_cluster_sync_idempotent.py  test_codegen_ssrf_and_ssl.py  test_core_utility_contracts.py  test_coverage_gate_config.py  test_credentials.py  test_custom_field_object_types_union.py  test_custom_field_object_types_union_netbox_versions.py  test_custom_fields_enabled_flag.py  test_database_endpoint_migrations.py  test_deploy_ci_gate.py  test_description_metadata.py  test_discovery_tags_create_only.py  test_dns_name_propagation.py  test_endpoint_crud.py  test_endpoint_placement_sync.py  test_ensure_device_overwrite_flags.py  test_ensure_tag_duplicate_recovery.py  test_error_handling.py  test_fetch_concurrency_kwarg.py  test_firewall_intent.py  test_full_update_stream_branching.py  (+108 more)
(+461 files in other folders)
