[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["proxbox_api*"]

[project]
name = "proxbox_api"
version = "0.0.3"
description = "Proxbox API service made using FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "proxmoxer>=2.3.0",
    "netbox-sdk>=0.0.6",
    "sqlmodel>=0.0.37",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
]
e2e = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
    "playwright>=1.58.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[project.scripts]
proxbox-proxmox-codegen = "proxbox_api.proxmox_codegen.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["proxbox_api"]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "proxbox_api/generated",
    "site",
    "nextjs-ui",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN201", "D103"]

[tool.ruff.lint.per-file-ignores]
"proxbox_api/**/*.py" = ["ANN201", "D103"]
"proxbox_api/app/**/*.py" = []
"proxbox_api/netbox_async_bridge.py" = []
"proxbox_api/services/sync/device_ensure.py" = []
"proxbox_api/session/proxmox_core.py" = []
"proxbox_api/session/proxmox_providers.py" = []
"proxbox_api/main.py" = ["E402", "ANN201", "D103"]
"proxbox_api/routes/proxmox/__init__.py" = ["F403", "F405", "E402", "ANN201", "D103"]
"proxbox_api/routes/proxmox/cluster.py" = ["F403", "F405", "ANN201", "D103"]

[tool.ruff.format]
quote-style = "double"
