[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["proxmox_mock*"]

[tool.setuptools.package-data]
proxmox_mock = ["generated/openapi.json"]

[project]
name = "proxmox-mock-api"
version = "0.0.6.post5"
description = "Schema-driven FastAPI mock for the generated Proxmox API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.2",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[project.scripts]
proxmox-mock-api = "proxmox_mock.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
source = ["proxmox_mock"]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN201", "D103", "W", "C90"]

[tool.ruff.lint.per-file-ignores]
"proxmox_mock/**/*.py" = ["ANN201", "D103"]
"tests/**/*.py" = ["ANN201", "D103"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
